GetAllCartsUseCase modified for better readability